# ForkCast

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/: TESTING.md
docs/specs/: 2026-03-20-forkcast-design.md  2026-03-30-prep-model-optimization-design.md  2026-03-31-interact-tab-design.md  2026-04-01-scientific-prediction-domains-design.md
docs/use-cases/: ad-copy-ab-testing.md  genomics-brca2-variant.md  medical-trials-venorastib.md  prediction-markets-tesla.md
domains/_default/: manifest.yaml
evolution/: 2026-03-21-first-live-report-and-chat.md  roadmap.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: install-oasis.sh
tests/: conftest.py  smoke_two_phase.py  test_action.py  test_agent_chat.py  test_api_capabilities.py  test_api_domains.py  test_api_graph.py  test_api_graph_data.py  test_api_health.py  test_api_interact.py  test_api_project_from_text.py  test_api_projects.py  test_api_report.py  test_api_simulation.py  test_api_simulation_run.py  test_chunker.py  test_claude_engine.py  test_claude_engine_two_phase.py  test_cli_build_graph.py  test_cli_chat.py  test_cli_domain.py  test_cli_eval.py  test_cli_project.py  test_cli_report.py  test_cli_sim.py  test_cli_sim_run.py  test_config.py  test_config_generator.py  test_db_migration_v6.py  test_db_queries.py  test_db_schema.py  test_domain_loader.py  test_domain_product_launch.py  test_domain_scaffold.py  test_dynamics.py  test_dynamics_api.py  test_dynamics_integration.py  test_e2e_phase7a.py  test_e2e_phase7b.py  test_entity_extractor.py  (+45 more)
(+214 files in other folders)
