[project]
name = "forkcast"
version = "0.1.0"
description = "Collective intelligence simulation platform"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "anthropic>=0.42",
    "typer[all]>=0.15",
    "networkx>=3.4",
    "chromadb>=0.6",
    "sentence-transformers>=3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1",
    "httpx>=0.28",
    "pypdf>=6.9.1",
    "sse-starlette>=3.3.3",
]

[project.scripts]
forkcast = "forkcast.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forkcast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
